# proto/gen/openapi.yaml
@@ -95,7 +95,7 @@ paths:
                   description: |-
                     Optional. The attachment ID to use for this attachment.
                      If empty, a unique ID will be generated.
-                     Format: ^[a-z]([a-z0-9-]{0,61}[a-z0-9])?$
+                     Format: ^[a-zA-Z0-9]([a-zA-Z0-9-]{0,34}[a-zA-Z0-9])?$
                   schema:
                     type: string
             requestBody:
@@ -350,7 +350,7 @@ paths:
                   description: |-
                     Optional. The ID to use for the identity provider, which will become the final component of the resource name.
                      If not provided, the system will generate one.
-                     Format: ^[a-z]([a-z0-9-]{0,61}[a-z0-9])?$
+                     Format: ^[a-zA-Z0-9]([a-zA-Z0-9-]{0,34}[a-zA-Z0-9])?$
                   schema:
                     type: string
             requestBody:
@@ -705,7 +705,7 @@ paths:
                   description: |-
                     Optional. The memo ID to use for this memo.
                      If empty, a unique ID will be generated.
-                     Format: ^[a-z]([a-z0-9-]{0,61}[a-z0-9])?$
+                     Format: ^[a-zA-Z0-9]([a-zA-Z0-9-]{0,34}[a-zA-Z0-9])?$
                   schema:
                     type: string
             requestBody:
@@ -1355,8 +1355,8 @@ paths:
                   in: query
                   description: |-
                     Optional. The resource ID to use for this user. If set, it must equal
-                     user.username and follow the User resource ID format.
-                     Format: ^[a-z]([a-z0-9-]{0,61}[a-z0-9])?$
+                     user.username, follow the UID format, and not consist entirely of digits.
+                     Format: ^[a-zA-Z0-9]([a-zA-Z0-9-]{0,34}[a-zA-Z0-9])?$
                   schema:
                     type: string
                 - name: validateOnly
@@ -3230,7 +3230,7 @@ components:
                     type: string
                     description: |-
                         The resource name of the memo.
-                         Format: memos/{memo}, memo is the user defined id or uuid.
+                         Format: memos/{memo}, where memo is the user-defined UID.
                 state:
                     enum:
                         - STATE_UNSPECIFIED
